@@ -2,6 +2,8 @@
 
 	* Amir: Opaque LSA bug fix for deletion of Type11's
 	* configure.ac: use --localstatedir for Unix sockets
+	* Hasso Tepper: When flushing as-ext LSAs flush associated NSSA
+	  LSAs.
 
 2003-04-04 Paul Jakma <paul@dishone.st>
 
